# gprojcpp

./: .gitignore  .gitmodules  README.md
TreeStructureRegions/: TreeStructureRegions.pro  abstractlocality.cpp  abstractlocality.h  country.cpp  country.h  main.cpp
lesson_1/TreeStructureRegions/: .gitignore  TreeStructureRegions.pro  abstractlocality.cpp  country.cpp  country.h  filesdialog.cpp  filesdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parserdata.cpp  parserdata.h
lesson_1/TreeStructureRegions/src/: abstractlocality.h  filesdialog.cpp  filesdialog.h  filesdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parserdata.cpp  parserdata.h
lesson_1/alexander/regionAndCityApp/: CMakeLists.txt
lesson_1/alexander/regionAndCityApp/app/: CMakeLists.txt  main.cpp
lesson_1/alexander/regionAndCityApp/app/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  waitingspinnerwidget.cpp  waitingspinnerwidget.h
lesson_1/alexander/regionAndCityApp/libs/: CMakeLists.txt
lesson_1/alexander/regionAndCityApp/libs/libtreeanalyzer/: CMakeLists.txt  csvparserimpl.h  csvregionparser.cpp  regions.cpp  treenode.cpp  treenode.h
lesson_1/alexander/regionAndCityApp/libs/libtreeanalyzer/include/: csvregionparser.h  regions.h
lesson_1/alexander/regionAndCityApp/libs/libtreeanalyzer/include/treeanalyzer/: csvregionparser.h  regions.h
lesson_1/alexander/regionAndCityApp/libs/libtreeanalyzer/tests/: CMakeLists.txt  main.cpp  test_csvregionparser.cpp
